ensure mobile menu button is visible in HCM

--- a/tbx/static_src/sass/components/_menu-button.scss
+++ b/tbx/static_src/sass/components/_menu-button.scss
@@ -47,6 +47,10 @@
             left: 14px;
             top: 29px;
         }
+
+        @media (forced-colors: active) {
+            filter: invert(1);
+        }
     }
 
     // Applied by js
